--- a/style.css
+++ b/style.css
@@ -1,18 +1,18 @@
 .square {
-    width: 200px;
-    height:200px;
-    border: 2px solid black
+  width: 12vw;
+  height: 14vh;
+  border: 2px solid black;
 }
-.grid{
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: center;
-    align-content: center;
-    width: 618px;
-    height: 618px;
+.grid {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+  align-content: center;
+  width: 40vw;
+  height: 40vh;
 }
 
-.mole{
-    background-image: url(mole.jpg);
-    background-size: cover;
+.mole {
+  background-image: url(mole.jpg);
+  background-size: cover;
 }
